[gd_scene load_steps=16 format=2]

[ext_resource path="res://blocks/HittableCoin.gd" type="Script" id=1]
[ext_resource path="res://blocks/Hittable.tscn" type="PackedScene" id=2]
[ext_resource path="res://sound/smb_coin.wav" type="AudioStream" id=3]
[ext_resource path="res://blocks/Coin.gdshader" type="Shader" id=4]
[ext_resource path="res://texture/blocks/coin_brick1.tres" type="Texture" id=5]
[ext_resource path="res://texture/blocks/coin_brick3.tres" type="Texture" id=6]
[ext_resource path="res://texture/blocks/coin_brick2.tres" type="Texture" id=7]
[ext_resource path="res://texture/items/coin1.tres" type="Texture" id=8]
[ext_resource path="res://texture/blocks/coin_brick4.tres" type="Texture" id=9]
[ext_resource path="res://sound/smb_bump.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Origin/Coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -48 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Origin/Coin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Origin/Coin:material:shader_param/transparent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Origin/CoinBrick:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, -6 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/transparent = 1.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HitableCoin" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="hit_coin" type="AudioStreamPlayer2D" parent="." index="1"]
position = Vector2( 0, -8 )
stream = ExtResource( 3 )

[node name="hit_brick" type="AudioStreamPlayer2D" parent="." index="2"]
position = Vector2( 0, -8 )
stream = ExtResource( 10 )

[node name="animation" type="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 3 )

[node name="Origin" type="Position2D" parent="." index="4"]

[node name="Coin" type="Sprite" parent="Origin" index="0"]
material = SubResource( 4 )
texture = ExtResource( 8 )

[node name="CoinBrick" type="AnimatedSprite" parent="Origin" index="1"]
frames = SubResource( 5 )
frame = 2
playing = true

[node name="Brick" type="Sprite" parent="Origin" index="2"]
visible = false
texture = ExtResource( 9 )
